--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+
+
+
+
+
 /* Sales-Figures */
 .barchart {
   height: 53px !important;
@@ -6,14 +11,14 @@
   background: #ffff;
   position: absolute;
   /* bottom: 3rem; */
-  left: 10%;
+  left: 20%;
   border-radius: 10px;
 }
-  .sales-figer {
+  .sales-figuers {
     width: 15%;
     text-align: center;
   }
-  .graph {
+  .graph1 {
     position: relative;
   }
     .underline {
@@ -29,23 +34,51 @@
 
 /* {footer} */
 
-.copyright{
+.footer {
+  height: 38px;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 1.5rem;
+  color: #5a5a89;
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  font-family: Roboto;
+  font-size: 10px;
+  font-weight: 700;
+  line-height: 16px;
+  letter-spacing: 1.5px;
+}
+
+
+/* .copyright{
   color: #EAF6F6;
   font-size: 0.75rem;
   padding: 20px 0;
   }
 
   .bottom-container{
-    background-color: #3f407c;
-    padding: 10px 0 0px;
-      color: #e4f7f3;
+    /* background-color: #3f407c; */
+    /* padding: 10px 0 0px;
+      color: black;
       margin: 0;
       bottom: 0;
       width: 100%;
-      position:fixed;
-      text-align: center;
+      /* overflow: scroll; */
+      /* position:fixed;
+      text-align: end;
+      margin-bottom: 0px;
       font-family: 'Merriweather', serif;
   }
+  .para{
+text-align: justify;
+  }
+
+  .footer-link{ */
+    /* text-align: end; */
+  /* } */ */ */
 
 
-  
+  {}
